moved depricated files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 trash
-CoCr10_chains_analysis_ignore.ipynb
+emp_data/Kusoffsky_and_Jansson_1997_A_thermodynamic_evaluation_of_the_Co.pdf
+tdbs/AgCu-04Wit-LB.tdb
+tdbs/AgGe-88Che-LB.tdb
+tdbs/AgSn_pbin.TDB
+tdbs/AlMg-13Tok.tdb
+tdbs/AlSi-97Feu-LB.tdb
+tdbs/AlZn-93Mey-LB.tdb
+tdbs/FeSi-17Cui.tdb
+tdbs/GeSi-84Ole.tdb
